# TL-discord-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 03eafc596107_added_game_type_to_events.py  231f07ea87c4_add_loot_manage_message_id.py  a3547e585507_drop_loot_announcement_message_id.py  a451f2df14a8_loot_threads_and_no_penalty_greed.py  e199f62d1f22_remove_userprofile_attendance_cascade.py
cogs/: attendance.py  loot.py  onboarding.py  profile.py  scheduling.py
database/: db_setup.py  models.py
