[project]
name = "tl_guild_bot"
version = "0.1.0"
description = "Automated scheduling and roster bot for Throne and Liberty."
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "sqlalchemy>=2.0.30",
    "python-dotenv>=1.0.1",
    "tzdata>=2026.2",
    "alembic>=1.13.1",
]

# Tells uv this is an application, not a library to be built
[tool.uv]
package = false
